--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.6",
-    "redux-thunk": "^2.3.0",
-    "web-push": "^3.4.4"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
